5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1575_1332.log
== TEST (2019-03-12 11:45:57) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:18) 
-- CODE:
aresta =5
area = 7,5 x (3)**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 7,5 x (3)**0.5
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:48) 
-- CODE:
aresta =5
area = 7,5 x (3)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.207499
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 2
    area = 7,5 x (3)**0.5
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:49) 
-- CODE:
aresta =5
area = 7,5 x (3)**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 7,5 x (3)**0.5
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:01) 
-- CODE:
aresta =5
area = 15/2*(3)**1/2
 
print(round(area, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:03) 
-- CODE:
aresta =5
area = 15/2*(3)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.181083
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:21) 
-- CODE:
aresta =5
area = 15/2*(3)**1/2
 
print(round(area, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:53:00) 
-- CODE:
aresta =5
area = 3/2*5*(3)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:53:02) 
-- CODE:
aresta =5
area = 3/2*5*(3)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.185301
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:53:03) 
-- CODE:
aresta =5
area = 3/2*5*(3)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:53:06) 
-- CODE:
aresta =5
area = 3/2*5*(3)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.16306
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:17) 
-- CODE:
aresta =5
area = 3/2*(3*aresta)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:19) 
-- CODE:
aresta =5
area = 3/2*(3*aresta)
 
print(round(area, 4))
-- EXECUTION TIME:
0.151125
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:53) 
-- CODE:
aresta =5
area = 3/2*(3**0.5*aresta)
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:55) 
-- CODE:
aresta =5
area = 3/2*(3**0.5*aresta)
 
print(round(area, 4))
-- EXECUTION TIME:
0.127653
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:50) 
-- CODE:
aresta =5
area = 3/2*(3**0.5*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:56:51) 
-- CODE:
aresta =5
area = 3/2*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.121854
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
